# TPS

./: .env.example  .gitignore  FrontendSpecification.md  README.md  TranslationProxySystemSpecification.md  pyproject.toml  todo_list.md
docs/: TranslationProxySystemSpecification.md  frontend_todo_list.md
frontend/: README.md  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: stores.ts
frontend/src/lib/api/: client.ts  index.ts  stats.ts  translations.ts
frontend/src/lib/components/charts/: DailyVolumeChart.svelte  ProviderPieChart.svelte  index.ts
frontend/src/lib/components/common/: Pagination.svelte
frontend/src/lib/components/history/: index.ts  (+2 more)
frontend/src/lib/i18n/: index.ts
frontend/src/lib/types/: api.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/files/: +page.svelte
frontend/src/routes/history/: +page.svelte
frontend/src/routes/translate/: +page.svelte
scripts/: cleanup_cache.py  dev.ps1  dev.sh  run_server.py  test_api.py  test_deepl.py  test_frontend_api.py  vacuum_db.py
src/tps/: __init__.py  app.py  config.py
src/tps/api/: __init__.py  routes.py
src/tps/clients/: __init__.py  base.py  deepl_client.py  google_client.py  openai_client.py
src/tps/core/: __init__.py  cost_control.py  external_data.py  key_generator.py  workflow.py
src/tps/db/: __init__.py  connection.py  dao.py
tests/: __init__.py  conftest.py  test_app_import.py  test_clients.py  test_cost_control.py  test_key_generator.py  test_workflow.py
tools/: check_server.py  migrate_db.py
(+16 files in other folders)
